src/stylesheets/index.css
/* ... */
.header__location {
  font-size: clamp(0.625rem, 0.3583rem + 0.8889vw, 0.825rem);
  font-weight: bold;
  text-transform: uppercase;
  margin: 0;
  text-align: center;
  text-wrap: balance;
}

section h2 {
  text-align: center;
}

section p {
  text-align: center;
  text-wrap: pretty;
  font-size: 1.125em;
  max-width: 34em;
  margin: 0.5em auto 1em;
}

.hero {
  --body-column: full;
  grid-row: 1;
  --text-color: white;
  --hero-bg-medium: image-set(
    cloudinary-url("hero-bg.jpg", '{"dpr": 1}') 1x,
    cloudinary-url("hero-bg.jpg", '{"dpr": 1.5}') 1.5x,
    cloudinary-url("hero-bg.jpg", '{"dpr": 2}') 2x
  );
  /* TODO: mobile and wide sizes */
  --hero-bg: var(--hero-bg-medium);

  color: var(--text-color);
  text-align: center;
  text-transform: uppercase;
  text-shadow: 1px 1px #333;
  background: #1E1E1E var(--hero-bg) no-repeat;
  background-position: center top;
  background-size: cover;

  display: grid;
  row-gap: 2em;
  padding-inline: 1em;

  min-height: 100svh;
  min-height: 100cqh;

  p {
    font-family: var(--accented-font);
    font-weight: 700;
  }

  ol {
    display: block;
    margin-block: 2em;
    padding: 0;
    max-width: 30ch;
    text-wrap: balance;
    list-style-type: none;
    font-family: var(--accented-font);
    line-height: 1.25;
    font-weight: 600;
    font-size: clamp(1.75rem, 6vw, 3rem);

    li {
      display: inline;
      line-break: strict;

      &[data-level="1"] {
        font-size: 1.45em;
      }

      &[data-level="3"] {
        font-size: 0.75em;
        font-weight: 500;
      }
    }

    li[data-level="2"] + li[data-level="2"]::before,
    li[data-level="3"] + li[data-level="3"]::before {
      content: "•";
      display: inline;
      padding-inline: 0.25em 0.4em;
    }

    li[data-level="1"] + li[data-level="2"]::before,
    li[data-level="2"] + li[data-level="3"]::before {
      content: "\a";
      white-space: pre;
    }

    a {
      color: var(--text-color);
      text-decoration: none;
      text-decoration-thickness: 0;
      transition: color 300ms ease-in,
      text-decoration 300ms allow-discrete,
      text-decoration-thickness 300ms ease-in;
    }

    a:hover, a:focus {
      color: var(--accent3-color);
      text-decoration: underline;
      text-decoration-thickness: 4px;
    }

    @starting-style {
      a {
        text-decoration: underline;
        text-decoration-thickness: 1px;
      }
    }
  }

  .cta {
    font-size: larger;
    text-shadow: none;
  }
}

.smap {
  width: 100%;
  max-width: 648px;
  height: 386px;
  font-family: var(--main-font);
}

.news-list {
  --columns: 2;

  display: grid;
  grid-template-columns: repeat(var(--columns), 1fr);
  grid-template-rows: masonry;
  grid-auto-flow: dense;
  gap: 1em;

  @media screen and (min-width: 801px) {
    --columns: 4;
  }

  header {
    grid-column: span var(--columns);
  }

  h2 {
    text-align: center;
    margin: 0;
  }

  .cta {
    place-self: center;
    grid-column: span var(--columns);
  }

  article {
    background-color: var(--blue-background-color);
    border-radius: var(--corner-radius);

    padding: 10px;
    grid-row: span 4;

    a {
      container-type: inline-size;
      display: grid;
      grid-auto-flow: row;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }

    img {
      --border-radius: calc(var(--corner-radius) / 2);
      width: 100%;
      height: auto;
      border-radius: var(--border-radius);
      clip-path: xywh(0 0 100% 92% round var(--border-radius));
      order: 1;
    }

    time {
      font-family: var(--accented-font);
      font-weight: 700;
      line-height: 1.2;
      z-index: 1;
      order: 2;
    }

    p {
      text-align: left;
    }
  }

  article:first-of-type {
    grid-column: 1 / 3;
    grid-row: span 8;
  }

  article + article p {
    font-size: 1em;
    max-height: 7.5em;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}

.artists-list {
  --columns: 2;
  --colspan: 1;

  container-type: inline-size;
  display: grid;
  grid-template-columns: repeat(var(--columns), 1fr);
  gap: 1em;

  @media screen and (min-width: 481px) {
    --columns: 4;
    --colspan: 2;
  }
  @media screen and (min-width: 840px) {
    --columns: 6;
  }

  header {
    grid-column: span var(--columns);
  }

  h2 {
    margin: 0;
  }

  article {
    grid-column: span var(--colspan);

    scroll-margin-block-start: 5em;
    border-radius: var(--corner-radius);

    container-type: inline-size;
    display: grid;
    overflow: hidden;

    &:target {
      border: 1px solid var(--accent3-color);
    }

    &[data-level="1"] {
      --colspan: 2;
    }

    h3 {
      font-size: clamp(1.25em, 4vw ,1.75em);
      font-weight: 700;
      line-height: 1.25;
      text-transform: uppercase;
      text-shadow: 1px 1px #333;
      text-align: center;
      text-wrap: balance;
      background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.43) 100%) 50% / cover no-repeat;
      color: #fff;
      margin: 0;
      grid-area: 1/1;
      width: calc(100% - 2em);
      padding-inline: 1em;
      padding-block: 0.25em;
      z-index: 10;
      place-self: end center;
    }

    img {
      grid-area: 1/1;
      width: 100%;
      height: auto;
      transition: scale 500ms cubic-bezier(.5, -.25, .75, 1);

      &:hover {
        scale: 1.1;
      }
    }
  }
}
/* ... */

